--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "",
+    "test-coverage": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
